--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h2 {
 }
 
 .top-banner {
-    background-image: url('/images/top-banner.png');
+    background-image: url('images/top-banner.png');
     background-repeat: no-repeat;
 }
 
@@ -51,7 +51,7 @@ section {
 }
 
 .middle-section {
-    background-image: url('/images/dream-bg.png');
+    background-image: url('images/dream-bg.png');
     background-repeat: no-repeat;
     background-position: right;
 }
@@ -63,7 +63,7 @@ section {
 }
 
 .experience-area {
-    background-image: url('/images/exp-bg.png');
+    background-image: url('images/exp-bg.png');
     background-repeat: no-repeat;
     background-position: left;
 }
